@@ -1,3 +1,11 @@
 body{
-    overflow:scroll;
+    margin: 0;
+
+    background-color: rgb(45, 47, 49);
+    color: white;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
 }
